# FairCon

./: .getcmake.sh.swp  .gitignore  .gitmodules  Dockerfile  Dockerfile.fse2020-faircon  README.md  getcmake.sh
_minted-CryptoRome/: 0A7BE2F7E37254171AE40C3252389319AC826586B173161EAF4B4F8FFC53F3EF.pygtex  29932710BFDE7B87F5181513128E9AA7AC826586B173161EAF4B4F8FFC53F3EF.pygtex  A329855CCC050206408F559432405B5AAC826586B173161EAF4B4F8FFC53F3EF.pygtex  C83A8FAA70FB1918A6E24A0D51DC58DFAC826586B173161EAF4B4F8FFC53F3EF.pygtex  E472F65B8A77B20737A80D83203BDD30AC826586B173161EAF4B4F8FFC53F3EF.pygtex
contracts/: README.md
contracts/dataset-fse2020-log/: README.md
contracts/dataset-fse2020-log/auction/collusion/: Auction-0x5b566b473bb0ea8dc0fc6047dd623e5fa3b42307.sol  AuctionManager-0x37512eec5e3ee7843a1ab59ef99fb52589037774.sol  AuctionMultipleGuaranteed-0x6c1c2fd38fccc0b010f75b2ece535cf57543ddcd.sol  AuctionPotato-0x433b189d5fbdfee89e3a9f4c6b9469495fcb00f1.sol  hotPotatoAuction-0x34eee0379a71e445b0dc52bda1d733c449ef1246.sol
contracts/dataset-fse2020-log/auction/efficient/: Auction-0x5b566b473bb0ea8dc0fc6047dd623e5fa3b42307.sol  AuctionManager-0x37512eec5e3ee7843a1ab59ef99fb52589037774.sol  AuctionMultipleGuaranteed-0x6c1c2fd38fccc0b010f75b2ece535cf57543ddcd.sol
contracts/dataset-fse2020-log/auction/optimal/: Auction-0x5b566b473bb0ea8dc0fc6047dd623e5fa3b42307.sol  AuctionManager-0x37512eec5e3ee7843a1ab59ef99fb52589037774.sol  AuctionMultipleGuaranteed-0x6c1c2fd38fccc0b010f75b2ece535cf57543ddcd.sol  AuctionPotato-0x433b189d5fbdfee89e3a9f4c6b9469495fcb00f1.sol  CryptoRomeAuction.sol  Deed-0xed139a28ec75a336bb1dcd6e3a0aba96c8217774.sol
contracts/dataset-fse2020-log/result/: summary_auction.csv  summary_performanc.csv  summary_voting-0-1.csv  summary_voting.csv
fse2020-fairness/: .Dockerfile.swo  .Dockerfile.swp  Dockerfile  README.md
fse2020-fairness/script/: demo.sh
fse2020-fairness/source/faircon/: .gitignore  tags  vimrc
scripts/: demo.sh  run_all_experiment.sh  run_auction_check_experiment.sh  run_experiment.sh
src/: .gitignore  .gitmodules  CMakeLists.txt  README.md  commit_hash.txt
src/cmake/: EthCompilerSettings.cmake  solidity.cmake
src/cmake/toolchains/: default.cmake
src/examples/: CryptoRomeAuction.sol  DAO.sol  array-2d-assignment.sol  array-access.sol  array-length.sol  array-struct.sol  bank.sol  for-loop-2.sol  for-loop-3.sol  for-loop.sol  function-call-2.sol  function-call-3.sol  function-call.sol  gas-left.sol  nest-while-3.sol  nest-while.sol  rec-fibonacci.sol  rec-function-call.sol  sha3.sol  struct-2.sol  struct.sol  test.sol  while-3.sol  while.sol
src/examples/auction/: crycollusion_collusion.result  crycollusion_effecient.result  crycollusion_truthful.result  hotPotatoAuction.sol
src/examples/auction/truthful/: CryptoRomeAuction.sol
src/libsolidity/analysis/: ControlFlowGraph.cpp  ControlFlowPrinter.cpp  ControlFlowPrinter.h
src/solidity/: BuildInfo.h
src/solse/: CMakeLists.txt  CommandLineInterface.cpp  SolidityExprTranslator.cpp  SymExecEngine.cpp  SymExecEngine.h  SymExecObject.h  main.cpp  mechanism.cpp  mechanism.h
test/Solc0_8_3/: Voting.sol
(+254 files in other folders)
